I have written spring web application disable comment in aplication properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=@1234
 ########### JPA properties ##########
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#### To disable to web server ########
+ # spring.main.web-application-type=none
