--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=9090
+
 ########## PostgreSQL properties #########
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= postgres
@@ -9,3 +11,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #### To disable to web server ########
  # spring.main.web-application-type=none
+
+ 
+ #Let as consider we have two property files ,i want only one property file details then we use sping profiles tag.
+# spring.profiles.active=application properties file Name
+
+
+
+############  for using @Value Annotations############
+spring.name= vineeth
